--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "gl-line3d": "^1.1.0",
     "gl-mat4": "^1.1.2",
     "gl-mesh3d": "^1.2.0",
-    "gl-plot2d": "^1.1.6",
+    "gl-plot2d": "git://github.com/gl-vis/gl-plot2d.git#8243ea83aed33763c0edebd3cb1e46ab2e93536e",
     "gl-plot3d": "^1.5.1",
     "gl-pointcloud2d": "^1.0.0",
     "gl-scatter2d": "^1.0.5",
